--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,11 @@
     "react-scripts": "^5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --disable-host-check",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "homepage": "."
   },
   "browserslist": {
     "production": [
@@ -28,5 +29,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
-  }
+  },
+  "proxy":"http://localhost:8000 " 
 }
