--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,5 @@
 REACT_APP_API_URL=http://127.0.0.1:8000/api
 HOST=0.0.0.0
-PUBLIC_HOST=skuptech.eu
+WDS_SOCKET_PORT=3000
+PUBLIC_HOST=https://skuptech.eu
 PORT=3000
