--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.7.8",
     "nth-check": "^2.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -30,5 +31,5 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
-  "proxy":"http://localhost:8000 " 
+  "proxy": "http://skuptech.eu:8000"
 }
